# LocalWhisper

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  clipboard.rs  commands.rs  config.rs  errors.rs  hotkey.rs  lib.rs  main.rs  models.rs  permissions.rs  sounds.rs  state.rs  system_info.rs  transcription.rs  tray.rs
src/components/: AudioDeviceSelector.tsx  DownloadProgress.tsx  HotkeyPicker.tsx  I18nProvider.tsx  LanguageSelector.tsx  ModelCard.tsx  ModelCatalog.tsx  ModelSelector.tsx  PermissionSetup.tsx  Settings.tsx  SetupWizard.tsx  UILanguageSwitcher.tsx  UpdateChecker.tsx
src/hooks/: useAppState.ts  useModels.ts  useSettings.ts
src/lib/: commands.ts  events.ts  i18n.ts  types.ts
src/styles/: global.css
