[package]
name = "local-whisper"
version = "0.1.0"
edition = "2021"

[lib]
name = "local_whisper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
rodio = "0.19"
enigo = "0.2"
reqwest = { version = "0.12", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
sysinfo = "0.31"
thiserror = "1"
log = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.13", features = ["metal"] }
objc = "0.2"

[target.'cfg(not(target_os = "macos"))'.dependencies]
whisper-rs = "0.13"
